MB-27767: Use configured CPUs not online for cb::get_cpu_count

sysconf(_SC_NPROCESSORS_ONLN) can return a number which is less than
a the index a thread may run on, hence we should use the configured
CPUs.

Change-Id: I27f1578b83f581b0359c4778b5caa45b0eea0c8a
Reviewed-on: http://review.couchbase.org/88484
Reviewed-by: Tim Bradgate <tim.bradgate@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: Build Bot <build@couchbase.com>